# CongressActivity

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
CongressActivity/: app.py
CongressActivity/templates/: aboutinfo.html  base.html  doughnut.html  footer.html  homepageheader.html  linegraph.html  navbar.html  officialheading.html  ranking.html  search.html  searchnavbar.html  senoverview.html  senrate.html  statdisplay.html  statdisplayindv.html
CongressActivity/templates/pages/: about.html  dash.html  home.html  official.html
tests/: test_congressactivity.py
