[tool.poetry]
name = "CongressActivity"
version = "0.1.0"
description = "How active are my representatives in Congress?"
authors = ["Jack McCain"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
requests = "^2.26.0"
python-dotenv = "^0.19.0"
tailwindcss = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
